--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -7,7 +7,7 @@
 }
 .firstContainer {
   height: 240px;
-  widht: 100%;
+  width: 100vw;
   background-color: #2c2a3b;
   border-radius: 0 0 25px 25px;
 }
@@ -63,8 +63,8 @@
   postion: relative;
 }
 
-.couponlanding{
-  margin:auto;
+.couponlanding {
+  margin: auto;
 }
 
 button {
